--- a/project/project.vcxproj
+++ b/project/project.vcxproj
@@ -12,22 +12,25 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\center_server\CenterServer.cpp" />
-    <ClCompile Include="..\GameServer\client_http.cpp" />
-    <ClCompile Include="..\GameServer\GameClientHandler.cpp" />
-    <ClCompile Include="..\GameServer\GameServer.cpp" />
-    <ClCompile Include="..\GameServer\GameServerMgr.cpp" />
+    <ClCompile Include="..\chat\chat_client.cpp" />
+    <ClCompile Include="..\chat\chat_server.cpp" />
+    <ClCompile Include="..\data_server\Users.cpp" />
     <ClCompile Include="..\game_ai\game_ai.cpp" />
+    <ClCompile Include="..\game_server\GameClientHandler.cpp" />
+    <ClCompile Include="..\game_server\GameServer.cpp" />
+    <ClCompile Include="..\game_server\GameServerMgr.cpp" />
+    <ClCompile Include="..\http_client\client_http.cpp" />
     <ClCompile Include="..\http_server\http_server_business.cpp" />
     <ClCompile Include="..\platform_server\client_main.cpp" />
     <ClCompile Include="..\platform_server\Desk.cpp" />
     <ClCompile Include="..\platform_server\PlatformServer.cpp" />
     <ClCompile Include="..\platform_server\room.cpp" />
     <ClCompile Include="..\platform_server\RoomManager.cpp" />
-    <ClCompile Include="..\platform_server\Users.cpp" />
     <ClCompile Include="..\protocol\chat.pb.cc" />
     <ClCompile Include="..\protocol\game.pb.cc" />
     <ClCompile Include="..\protocol\platform.pb.cc" />
     <ClCompile Include="..\src\center_server_main.cpp" />
+    <ClCompile Include="..\src\chat_server_main.cpp" />
     <ClCompile Include="..\src\game_server_main.cpp" />
     <ClCompile Include="..\src\http_server_main.cpp" />
     <ClCompile Include="..\src\main.cpp" />
@@ -38,19 +41,21 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\center_server\CenterServer.h" />
-    <ClInclude Include="..\common\common_struct.h" />
-    <ClInclude Include="..\GameServer\client_http.h" />
-    <ClInclude Include="..\GameServer\GameClientHandler.h" />
-    <ClInclude Include="..\GameServer\GameServer.h" />
-    <ClInclude Include="..\GameServer\GameServerMgr.h" />
+    <ClInclude Include="..\chat\chat_client.h" />
+    <ClInclude Include="..\chat\chat_server.h" />
+    <ClInclude Include="..\data_server\common_struct.h" />
+    <ClInclude Include="..\data_server\Users.h" />
     <ClInclude Include="..\game_ai\game_ai.h" />
+    <ClInclude Include="..\game_server\GameClientHandler.h" />
+    <ClInclude Include="..\game_server\GameServer.h" />
+    <ClInclude Include="..\game_server\GameServerMgr.h" />
+    <ClInclude Include="..\http_client\client_http.h" />
     <ClInclude Include="..\http_server\http_server_business.h" />
     <ClInclude Include="..\platform_server\client_main.h" />
     <ClInclude Include="..\platform_server\Desk.h" />
     <ClInclude Include="..\platform_server\PlatformServer.h" />
     <ClInclude Include="..\platform_server\room.h" />
     <ClInclude Include="..\platform_server\RoomManager.h" />
-    <ClInclude Include="..\platform_server\Users.h" />
     <ClInclude Include="..\protocol\chat.pb.h" />
     <ClInclude Include="..\protocol\command.h" />
     <ClInclude Include="..\protocol\game.pb.h" />
@@ -134,7 +139,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\src;..\protocol;..\http_server;..\platform_server;..\center_server;..\center_ai;..\gameserver;..\common;..\..\lw_core\include;..\..\lw_net\include;..\..\lw_net\nanorpc;..\..\lw_common\include;..\..\lw_common\json;..\..\libcityhash;..\..\libnanorpc;..\..\..\cross-common\libevent;..\..\..\cross-common\libevent\include;..\..\..\cross-common\libevent\build\vs2013\include;..\..\..\cross-common\libevent\WIN32-Code;..\..\..\cross-common\nanomsg\src;..\..\..\cross-common\protobuf\protobuf-cpp-3.1.0\protobuf-3.1.0\src;..\..\..\cross-common\prebuilt-dll-2-9-1-release\include;E:\boost\boost_1_65_1</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\src;..\protocol;..\http_server;..\platform_server;..\center_server;..\game_ai;..\game_server;..\data_server;..\http_client;..\chat;..\..\lw_core\include;..\..\lw_net\include;..\..\lw_net\nanorpc;..\..\lw_common\include;..\..\lw_common\json;..\..\libcityhash;..\..\libnanorpc;..\..\..\cross-common\libevent;..\..\..\cross-common\libevent\include;..\..\..\cross-common\libevent\build\vs2013\include;..\..\..\cross-common\libevent\WIN32-Code;..\..\..\cross-common\nanomsg\src;..\..\..\cross-common\protobuf\protobuf-cpp-3.1.0\protobuf-3.1.0\src;..\..\..\cross-common\prebuilt-dll-2-9-1-release\include;E:\boost\boost_1_65_1</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -152,7 +157,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\src;..\protocol;..\http_server;..\platform_server;..\center_server;..\gameserver;..\common;..\..\lw_core\include;..\..\lw_net\include;..\..\lw_net\nanorpc;..\..\lw_common\include;..\..\lw_common\json;..\..\libcityhash;..\..\libnanorpc;..\..\..\cross-common\libevent;..\..\..\cross-common\libevent\include;..\..\..\cross-common\libevent\build\vs2013\include;..\..\..\cross-common\libevent\WIN32-Code;..\..\..\cross-common\nanomsg\src;..\..\..\cross-common\protobuf\protobuf-cpp-3.1.0\protobuf-3.1.0\src;..\..\..\cross-common\prebuilt-dll-2-9-1-release\include;E:\boost\boost_1_65_1</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\src;..\protocol;..\http_server;..\platform_server;..\center_server;..\gameserver;..\..\lw_data\include;..\..\lw_core\include;..\..\lw_net\include;..\..\lw_net\nanorpc;..\..\lw_common\include;..\..\lw_common\json;..\..\libcityhash;..\..\libnanorpc;..\..\..\cross-common\libevent;..\..\..\cross-common\libevent\include;..\..\..\cross-common\libevent\build\vs2013\include;..\..\..\cross-common\libevent\WIN32-Code;..\..\..\cross-common\nanomsg\src;..\..\..\cross-common\protobuf\protobuf-cpp-3.1.0\protobuf-3.1.0\src;..\..\..\cross-common\prebuilt-dll-2-9-1-release\include;E:\boost\boost_1_65_1</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
