--- a/project/project.vcxproj.filters
+++ b/project/project.vcxproj.filters
@@ -4,9 +4,6 @@
     <Filter Include="center_server">
       <UniqueIdentifier>{c3150226-70a7-4102-9ac7-71f571b13802}</UniqueIdentifier>
     </Filter>
-    <Filter Include="common">
-      <UniqueIdentifier>{8025591e-7c0d-4b96-ace5-1c428241c0b6}</UniqueIdentifier>
-    </Filter>
     <Filter Include="http_server">
       <UniqueIdentifier>{60955ad1-6484-46c5-93c8-00334c2c8ad2}</UniqueIdentifier>
     </Filter>
@@ -24,6 +21,15 @@
     </Filter>
     <Filter Include="game_ai">
       <UniqueIdentifier>{512ce709-7a5b-487f-ad9c-4aa20d02f4ca}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="chat">
+      <UniqueIdentifier>{5f2abd48-907a-4172-bd90-4404add8030d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="data_server">
+      <UniqueIdentifier>{c03b07de-8117-4a20-869c-fec804fbde1e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="http_client">
+      <UniqueIdentifier>{e1700c6f-a8e9-40b0-9699-a12697932b50}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -43,9 +49,6 @@
       <Filter>platform_server</Filter>
     </ClCompile>
     <ClCompile Include="..\platform_server\RoomManager.cpp">
-      <Filter>platform_server</Filter>
-    </ClCompile>
-    <ClCompile Include="..\platform_server\Users.cpp">
       <Filter>platform_server</Filter>
     </ClCompile>
     <ClCompile Include="..\protocol\game.pb.cc">
@@ -69,12 +72,6 @@
     <ClCompile Include="..\src\pubsub_main.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="..\GameServer\client_http.cpp">
-      <Filter>game_server</Filter>
-    </ClCompile>
-    <ClCompile Include="..\GameServer\GameServer.cpp">
-      <Filter>game_server</Filter>
-    </ClCompile>
     <ClCompile Include="..\src\game_server_main.cpp">
       <Filter>src</Filter>
     </ClCompile>
@@ -90,22 +87,37 @@
     <ClCompile Include="..\platform_server\client_main.cpp">
       <Filter>platform_server</Filter>
     </ClCompile>
-    <ClCompile Include="..\GameServer\GameServerMgr.cpp">
-      <Filter>game_server</Filter>
-    </ClCompile>
-    <ClCompile Include="..\GameServer\GameClientHandler.cpp">
-      <Filter>game_server</Filter>
-    </ClCompile>
     <ClCompile Include="..\protocol\chat.pb.cc">
       <Filter>protocol</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\chat_server_main.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\chat\chat_client.cpp">
+      <Filter>chat</Filter>
+    </ClCompile>
+    <ClCompile Include="..\chat\chat_server.cpp">
+      <Filter>chat</Filter>
+    </ClCompile>
+    <ClCompile Include="..\data_server\Users.cpp">
+      <Filter>data_server</Filter>
+    </ClCompile>
+    <ClCompile Include="..\http_client\client_http.cpp">
+      <Filter>http_client</Filter>
+    </ClCompile>
+    <ClCompile Include="..\game_server\GameClientHandler.cpp">
+      <Filter>game_server</Filter>
+    </ClCompile>
+    <ClCompile Include="..\game_server\GameServer.cpp">
+      <Filter>game_server</Filter>
+    </ClCompile>
+    <ClCompile Include="..\game_server\GameServerMgr.cpp">
+      <Filter>game_server</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\center_server\CenterServer.h">
       <Filter>center_server</Filter>
-    </ClInclude>
-    <ClInclude Include="..\common\common_struct.h">
-      <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="..\http_server\http_server_business.h">
       <Filter>http_server</Filter>
@@ -122,9 +134,6 @@
     <ClInclude Include="..\platform_server\RoomManager.h">
       <Filter>platform_server</Filter>
     </ClInclude>
-    <ClInclude Include="..\platform_server\Users.h">
-      <Filter>platform_server</Filter>
-    </ClInclude>
     <ClInclude Include="..\protocol\command.h">
       <Filter>protocol</Filter>
     </ClInclude>
@@ -137,26 +146,38 @@
     <ClInclude Include="..\src\main.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="..\GameServer\client_http.h">
-      <Filter>game_server</Filter>
-    </ClInclude>
-    <ClInclude Include="..\GameServer\GameServer.h">
-      <Filter>game_server</Filter>
-    </ClInclude>
     <ClInclude Include="..\game_ai\game_ai.h">
       <Filter>game_ai</Filter>
     </ClInclude>
     <ClInclude Include="..\platform_server\client_main.h">
       <Filter>platform_server</Filter>
     </ClInclude>
-    <ClInclude Include="..\GameServer\GameServerMgr.h">
-      <Filter>game_server</Filter>
-    </ClInclude>
-    <ClInclude Include="..\GameServer\GameClientHandler.h">
-      <Filter>game_server</Filter>
-    </ClInclude>
     <ClInclude Include="..\protocol\chat.pb.h">
       <Filter>protocol</Filter>
+    </ClInclude>
+    <ClInclude Include="..\chat\chat_client.h">
+      <Filter>chat</Filter>
+    </ClInclude>
+    <ClInclude Include="..\chat\chat_server.h">
+      <Filter>chat</Filter>
+    </ClInclude>
+    <ClInclude Include="..\data_server\common_struct.h">
+      <Filter>data_server</Filter>
+    </ClInclude>
+    <ClInclude Include="..\data_server\Users.h">
+      <Filter>data_server</Filter>
+    </ClInclude>
+    <ClInclude Include="..\http_client\client_http.h">
+      <Filter>http_client</Filter>
+    </ClInclude>
+    <ClInclude Include="..\game_server\GameClientHandler.h">
+      <Filter>game_server</Filter>
+    </ClInclude>
+    <ClInclude Include="..\game_server\GameServer.h">
+      <Filter>game_server</Filter>
+    </ClInclude>
+    <ClInclude Include="..\game_server\GameServerMgr.h">
+      <Filter>game_server</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
